Changed the entity to use Lombok and removed getter and setters.